[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/menu font.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/title font.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/menu theme.tres" type="Theme" id=3]
[ext_resource path="res://scripts/menu.gd" type="Script" id=4]
[ext_resource path="res://packed scenes/level select block.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/level grid.gd" type="Script" id=6]
[ext_resource path="res://audio/XSFXMenuSelect.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/XSFXMenuTick.wav" type="AudioStream" id=8]
[ext_resource path="res://scripts/volume slider.gd" type="Script" id=9]

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.705882, 0.576471, 0.435294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main menu" type="VBoxContainer" parent="."]
anchor_left = 0.053
anchor_top = 0.058
anchor_right = 0.95
anchor_bottom = 0.956
margin_left = -1.96
margin_top = 0.559999
margin_right = 1.0
margin_bottom = 0.919998
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="MarginContainer" parent="main menu"]
margin_left = 20.0
margin_right = 290.0
margin_bottom = 36.0
grow_horizontal = 0
size_flags_horizontal = 12
size_flags_vertical = 15

[node name="label" type="Label" parent="main menu/Title"]
margin_right = 270.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Snail Bail"
uppercase = true

[node name="spacer" type="MarginContainer" parent="main menu"]
margin_top = 40.0
margin_right = 290.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 10 )

[node name="Play" type="MarginContainer" parent="main menu"]
margin_left = 210.0
margin_top = 54.0
margin_right = 290.0
margin_bottom = 78.0
grow_horizontal = 0
size_flags_horizontal = 12
size_flags_vertical = 15

[node name="play_button" type="Button" parent="main menu/Play"]
margin_right = 80.0
margin_bottom = 24.0
hint_tooltip = "have an epic gamer time"
focus_neighbour_right = NodePath("../../Level Select/level_select_button")
focus_neighbour_bottom = NodePath("../../Level Select/level_select_button")
focus_next = NodePath("../../Level Select/level_select_button")
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
action_mode = 0
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level Select" type="MarginContainer" parent="main menu"]
margin_left = 70.0
margin_top = 82.0
margin_right = 290.0
margin_bottom = 106.0
grow_horizontal = 0
size_flags_horizontal = 12
size_flags_vertical = 15

[node name="level_select_button" type="Button" parent="main menu/Level Select"]
margin_right = 220.0
margin_bottom = 24.0
hint_tooltip = "select levels"
focus_neighbour_left = NodePath("../../Play/play_button")
focus_neighbour_top = NodePath("../../Play/play_button")
focus_neighbour_right = NodePath("../../Quit/quit_button")
focus_neighbour_bottom = NodePath("../../Volume/VSplitContainer/CenterContainer2/volume slider")
focus_next = NodePath("../../Volume/VSplitContainer/CenterContainer2/volume slider")
focus_previous = NodePath("../../Play/play_button")
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
action_mode = 0
text = "Level Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" type="MarginContainer" parent="main menu"]
margin_left = 38.0
margin_top = 110.0
margin_right = 290.0
margin_bottom = 134.0
grow_horizontal = 0
size_flags_horizontal = 12
size_flags_vertical = 15

[node name="VSplitContainer" type="HSplitContainer" parent="main menu/Volume"]
margin_right = 252.0
margin_bottom = 24.0
dragger_visibility = 1

[node name="CenterContainer" type="CenterContainer" parent="main menu/Volume/VSplitContainer"]
margin_right = 120.0
margin_bottom = 24.0

[node name="label" type="Label" parent="main menu/Volume/VSplitContainer/CenterContainer"]
margin_right = 120.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Volume"

[node name="CenterContainer2" type="CenterContainer" parent="main menu/Volume/VSplitContainer"]
margin_left = 132.0
margin_right = 252.0
margin_bottom = 24.0

[node name="volume slider" type="HSlider" parent="main menu/Volume/VSplitContainer/CenterContainer2"]
margin_top = 4.0
margin_right = 120.0
margin_bottom = 20.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_top = NodePath("../../../../Level Select/level_select_button")
focus_neighbour_bottom = NodePath("../../../../Quit/quit_button")
focus_next = NodePath("../../../../Quit/quit_button")
focus_previous = NodePath("../../../../Level Select/level_select_button")
min_value = -40.0
max_value = 12.0
script = ExtResource( 9 )

[node name="Quit" type="MarginContainer" parent="main menu"]
margin_left = 214.0
margin_top = 138.0
margin_right = 290.0
margin_bottom = 162.0
grow_horizontal = 0
size_flags_horizontal = 12
size_flags_vertical = 15

[node name="quit_button" type="Button" parent="main menu/Quit"]
margin_right = 76.0
margin_bottom = 24.0
hint_tooltip = "quit the game"
focus_neighbour_left = NodePath("../../Level Select/level_select_button")
focus_neighbour_top = NodePath("../../Volume/VSplitContainer/CenterContainer2/volume slider")
focus_previous = NodePath("../../Volume/VSplitContainer/CenterContainer2/volume slider")
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
action_mode = 0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level select menu" type="VSplitContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="MarginContainer" parent="level select menu"]
margin_left = 5.0
margin_top = 5.0
margin_right = 76.0
margin_bottom = 24.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="button" type="Button" parent="level select menu/Back"]
margin_right = 76.0
margin_bottom = 24.0
theme = ExtResource( 3 )
action_mode = 0
text = "back"

[node name="scroll container" type="ScrollContainer" parent="level select menu"]
margin_left = 40.0
margin_top = 36.0
margin_right = 320.0
margin_bottom = 156.0
rect_min_size = Vector2( 280, 120 )
rect_clip_content = false
size_flags_horizontal = 8
size_flags_vertical = 0
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level grid" type="GridContainer" parent="level select menu/scroll container"]
margin_right = 280.0
margin_bottom = 120.0
hint_tooltip = "what a great scrollbra, wowie!"
size_flags_horizontal = 15
size_flags_vertical = 15
theme = ExtResource( 3 )
custom_constants/vseparation = 10
columns = 2
script = ExtResource( 6 )
block = ExtResource( 5 )

[node name="level select block" parent="level select menu/scroll container/level grid" instance=ExtResource( 5 )]
margin_right = 140.0
margin_bottom = 120.0

[node name="select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="tick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
